Remove database seed and data manipulation files
Removed 22 database creation/manipulation files:
- Seed files: seedData.js, seedCategories.js, seedPlantTypes.js, seedPlantTypesFixed.js
- Add files: addPlantsToPlots.js, addTreeTypes.js, addCoordinatesToExistingData.js
- Create files: createSamplePlants.js, createSuperAdmin.js, createDomainAdmin.js
- Fix files: fixPlantTypes.js, fixPlantTypeEmojis.js, fixPlantTypeCategories.js, fixCategoryOrganization.js, fixRemainingVarieties.js
- Update files: updateUserEmail.js, updateUserPassword.js, updateDataToLocationRules.js, updateOrganizationId.js
- Migration files: migratePlotIdToPlotIds.js, moveJackfruitToTree.js
- Check files: checkUsers.js, checkPlantData.js, checkPlantCoordinates.js
- Investigation files: investigateDataLoss.js, verifyMapData.js

Updated .gitignore to exclude these file types in future

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,18 @@ server.log
 FINAL_TEST_RESULTS.md
 TEST_RESULTS_SUMMARY.md
 
+# Database seed and data manipulation files
+seed*.js
+add*.js
+create*.js
+fix*.js
+update*.js
+migrate*.js
+move*.js
+check*.js
+investigate*.js
+verify*.js
+
 # Runtime data
 pids
 *.pid
