--- a/package.json
+++ b/package.json
@@ -4,21 +4,38 @@
   "description": "A comprehensive plant tracking application for Sanctity Ferme",
   "private": true,
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
+    "@sentry/node": "^10.20.0",
     "@sentry/react": "^10.20.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^7.2.0",
+    "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "mapbox-gl": "^3.14.0",
+    "mongoose": "^7.5.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sharp": "^0.34.4",
+    "web-vitals": "^2.1.4",
+    "winston": "^3.18.3"
   },
   "scripts": {
     "start": "react-scripts start",
