--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-scripts": "5.0.1",
     "sharp": "^0.34.4",
     "web-vitals": "^2.1.4",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
