Security: Add comprehensive safeguards to prevent credential exposure
- Remove all hardcoded password fallbacks (require env vars)
- Add pre-commit hook to scan for credentials
- Update .gitignore with credential file patterns
- Add SECURITY.md with guidelines
- Add security section to README
- Configure git hooks path

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,21 @@ Thumbs.db
 
 # Google Cloud credentials
 backend/config/google-cloud-key.json
+*.json.key
+*credentials*.json
+*secrets*.json
+*keys*.json
+
+# Credential files - NEVER commit these
+*password*.txt
+*password*.js
+*password*.ts
+*secret*.txt
+*secret*.js
+*secret*.ts
+*credential*.txt
+*credential*.js
+*credential*.ts
 
 # Uploads directory (user uploaded content)
 backend/uploads/
